# fastapi-sample-app

./: docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/: main.py
