[tool.poetry]
name = "mnt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
pytest = "^8.0.0"
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
flake8-black = "^0.3.6"
pydantic = "^2.6.1"
autopep8 = "^2.0.4"
trueskill = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
